--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "^10.1.1",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
     "@types/chart.js": "^2.9.21",
+    "@types/d3": "^6.2.0",
     "@types/leaflet": "^1.5.17",
     "@types/papaparse": "^5.0.3",
     "@types/plotly.js": "^1.50.15",
