Added .npmrc file for installing the common library

--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -17,24 +17,25 @@
     "https": false
   },
   "dependencies": {
-    "@angular/animations": "^11.0.9",
+    "@angular/animations": "^11.2.4",
     "@angular/cdk": "^11.0.3",
-    "@angular/common": "^11.0.9",
-    "@angular/compiler": "^11.0.9",
-    "@angular/core": "^11.0.9",
-    "@angular/forms": "^11.0.9",
+    "@angular/common": "^11.2.4",
+    "@angular/compiler": "^11.2.4",
+    "@angular/core": "^11.2.4",
+    "@angular/forms": "^11.2.4",
     "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "^11.0.9",
-    "@angular/platform-browser-dynamic": "^11.0.9",
-    "@angular/router": "^11.0.9",
+    "@angular/platform-browser": "^11.2.4",
+    "@angular/platform-browser-dynamic": "^11.2.4",
+    "@angular/router": "^11.2.4",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
-    "@owf/common": "file:../../../../AngularDev/git-repos/owf-app-dev-ng/ng-workspace/dist/owf-common/owf-common-0.0.1.tgz",
+    "@openwaterfoundation/common": "0.0.1-alpha",
     "@types/chart.js": "^2.9.21",
     "@types/d3": "^6.2.0",
     "@types/leaflet": "^1.5.17",
     "@types/papaparse": "^5.0.3",
     "@types/plotly.js": "^1.50.15",
     "@types/showdown": "^1.9.3",
+    "bindings": "^1.5.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-zoom": "^0.7.7",
@@ -71,11 +72,11 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.7",
-    "@angular-devkit/core": "^11.0.7",
-    "@angular/cli": "~11.0.7",
-    "@angular/compiler-cli": "^11.0.9",
-    "@angular/language-service": "~11.0.9",
+    "@angular-devkit/build-angular": "^0.1102.3",
+    "@angular-devkit/core": "^11.2.3",
+    "@angular/cli": "~11.2.3",
+    "@angular/compiler-cli": "^11.2.4",
+    "@angular/language-service": "~11.2.4",
     "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -84,7 +85,7 @@
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
+    "karma": "~6.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
