--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -28,7 +28,7 @@
     "@angular/platform-browser-dynamic": "^11.2.4",
     "@angular/router": "^11.2.4",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
-    "@OpenWaterFoundation/common": "0.0.1-alpha.10",
+    "@OpenWaterFoundation/common": "0.0.1",
     "@types/chart.js": "^2.9.21",
     "@types/d3": "^6.2.0",
     "@types/leaflet": "^1.7.0",
