--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -28,7 +28,7 @@
     "@angular/platform-browser-dynamic": "^11.2.4",
     "@angular/router": "^11.2.4",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
-    "@OpenWaterFoundation/common": "0.2.0",
+    "@OpenWaterFoundation/common": "0.3.0",
     "@turf/bbox": "^6.3.0",
     "@turf/boolean-point-in-polygon": "^6.3.0",
     "@types/chart.js": "^2.9.21",
@@ -67,6 +67,7 @@
     "plotly.js": "^1.54.6",
     "popper.js": "^1.15.0",
     "rainbowvis.js": "^1.0.1",
+    "resize-observer-polyfill": "^1.5.1",
     "robust-point-in-polygon": "^1.0.3",
     "rxjs": "~6.5.5",
     "select2": "^4.0.13",
