--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -22,13 +22,14 @@
     "@angular/common": "^11.2.4",
     "@angular/compiler": "^11.2.4",
     "@angular/core": "^11.2.4",
+    "@angular/elements": "^11.2.4",
     "@angular/forms": "^11.2.4",
     "@angular/material": "^11.0.3",
     "@angular/platform-browser": "^11.2.4",
     "@angular/platform-browser-dynamic": "^11.2.4",
     "@angular/router": "^11.2.4",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
-    "@OpenWaterFoundation/common": "0.3.0",
+    "@OpenWaterFoundation/common": "0.4.0",
     "@turf/bbox": "^6.3.0",
     "@turf/boolean-point-in-polygon": "^6.3.0",
     "@types/chart.js": "^2.9.21",
@@ -44,6 +45,7 @@
     "clusterize.js": "^0.18.1",
     "core-js": "^2.5.4",
     "d3": "^6.1.1",
+    "document-register-element": "^1.7.2",
     "esri-leaflet": "^2.5.0",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
