--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open"
   },
   "private": true,
   "browser": {
@@ -44,6 +45,7 @@
     "chartjs-plugin-zoom": "^0.7.7",
     "clusterize.js": "^0.18.1",
     "core-js": "^2.5.4",
+    "cypress": "^8.3.1",
     "d3": "^6.1.1",
     "document-register-element": "^1.7.2",
     "esri-leaflet": "^2.5.0",
