--- a/infomapper/tsconfig.json
+++ b/infomapper/tsconfig.json
@@ -22,8 +22,10 @@
       "dom"
     ]
   },
+  "include": ["**/*.ts"],
   "types":[
     "node",
-    "jquery"
+    "jquery",
+    "cypress"
   ]
 }
