--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -30,7 +30,7 @@
     "@angular/platform-browser-dynamic": "^11.2.4",
     "@angular/router": "^11.2.4",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
-    "@OpenWaterFoundation/common": "0.5.0",
+    "@OpenWaterFoundation/common": "0.6.0",
     "@turf/bbox": "^6.3.0",
     "@turf/boolean-point-in-polygon": "^6.3.0",
     "@types/chart.js": "^2.9.21",
@@ -38,6 +38,7 @@
     "@types/leaflet": "^1.7.0",
     "@types/papaparse": "^5.0.3",
     "@types/plotly.js": "^1.50.15",
+    "@types/select2": "^4.0.54",
     "@types/showdown": "^1.9.3",
     "bindings": "^1.5.0",
     "bootstrap": "^4.3.1",
@@ -63,6 +64,7 @@
     "lodash": "^4.17.19",
     "material-design-icons": "^3.0.1",
     "moment": "^2.26.0",
+    "ng-select2": "^1.2.8",
     "ng-table-virtual-scroll": "^1.3.3",
     "ngx-bootstrap": "^4.2.0",
     "ngx-gallery-9": "^1.0.6",
