--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -18,30 +18,33 @@
     "https": false
   },
   "dependencies": {
-    "@angular/animations": "^11.2.4",
-    "@angular/cdk": "^11.0.3",
-    "@angular/common": "^11.2.4",
-    "@angular/compiler": "^11.2.4",
-    "@angular/core": "^11.2.4",
-    "@angular/elements": "^11.2.4",
-    "@angular/forms": "^11.2.4",
-    "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "^11.2.4",
-    "@angular/platform-browser-dynamic": "^11.2.4",
-    "@angular/router": "^11.2.4",
+    "@angular/animations": "^13.2.0",
+    "@angular/cdk": "^13.1.3",
+    "@angular/common": "^13.2.0",
+    "@angular/compiler": "^13.2.0",
+    "@angular/core": "^13.2.0",
+    "@angular/elements": "^13.2.0",
+    "@angular/forms": "^13.2.0",
+    "@angular/material": "^13.1.3",
+    "@angular/platform-browser": "^13.2.0",
+    "@angular/platform-browser-dynamic": "^13.2.0",
+    "@angular/router": "^13.2.0",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
-    "@OpenWaterFoundation/common": "0.6.1",
+    "@OpenWaterFoundation/common": "0.6.7",
+    "@popperjs/core": "^2.11.2",
     "@turf/bbox": "^6.3.0",
     "@turf/boolean-point-in-polygon": "^6.3.0",
     "@types/chart.js": "^2.9.21",
     "@types/d3": "^6.2.0",
+    "@types/express": "^4.17.13",
     "@types/leaflet": "^1.7.0",
     "@types/papaparse": "^5.0.3",
     "@types/plotly.js": "^1.50.15",
     "@types/select2": "^4.0.54",
     "@types/showdown": "^1.9.3",
+    "acorn": "^8.7.0",
     "bindings": "^1.5.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^5.1.3",
     "chart.js": "^2.9.3",
     "chartjs-plugin-zoom": "^0.7.7",
     "clusterize.js": "^0.18.1",
@@ -53,9 +56,9 @@
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "geoblaze": "^0.3.0",
-    "georaster": "^1.1.0",
-    "georaster-layer-for-leaflet": "^0.6.0",
-    "jquery": "^3.5.1",
+    "georaster": "^1.5.6",
+    "georaster-layer-for-leaflet": "^0.6.8",
+    "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "leaflet-mouse-position": "^1.2.0",
     "leaflet-sidebar-v2": "^3.2.0",
@@ -64,9 +67,8 @@
     "lodash": "^4.17.19",
     "material-design-icons": "^3.0.1",
     "moment": "^2.26.0",
-    "ng-select2": "^1.2.8",
-    "ng-table-virtual-scroll": "^1.3.3",
-    "ngx-bootstrap": "^4.2.0",
+    "ng-select2": "^1.4.1",
+    "ng-table-virtual-scroll": "^1.4.0",
     "ngx-gallery-9": "^1.0.6",
     "ngx-showdown": "^6.0.0",
     "papaparse": "^5.2.0",
@@ -74,28 +76,27 @@
     "popper.js": "^1.15.0",
     "rainbowvis.js": "^1.0.1",
     "resize-observer-polyfill": "^1.5.1",
-    "robust-point-in-polygon": "^1.0.3",
-    "rxjs": "~6.5.5",
+    "rxjs": "^7.5.2",
     "select2": "^4.0.13",
     "showdown": "^1.9.1",
-    "tslib": "^1.14.1",
-    "zone.js": "~0.10.3"
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.3",
-    "@angular-devkit/core": "^11.2.3",
-    "@angular/cli": "~11.2.3",
-    "@angular/compiler-cli": "^11.2.4",
-    "@angular/language-service": "~11.2.4",
+    "@angular-devkit/build-angular": "^13.2.1",
+    "@angular-devkit/core": "^13.2.1",
+    "@angular/cli": "~13.2.1",
+    "@angular/compiler-cli": "^13.2.0",
+    "@angular/language-service": "~13.2.0",
     "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.3.29",
+    "@types/jquery": "^3.5.13",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.1",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.1",
+    "karma": "~6.3.11",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -103,6 +104,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.5.5"
   }
 }
