Issue #421: Added the date-fns package and the foundation for Jasmine/Karma tests.

--- a/infomapper/tsconfig.json
+++ b/infomapper/tsconfig.json
@@ -22,7 +22,13 @@
       "dom"
     ]
   },
-  "include": ["**/*.ts"],
+  "include": [
+    "**/*.ts",
+    "src/tsconfig.spec.json"
+  ],
+  "exclude": [
+    "cypress"
+  ],
   "types":[
     "node",
     "jquery",
