--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -41,19 +41,20 @@
     "bootstrap": "^5.1.3",
     "clusterize.js": "^0.18.1",
     "d3": "^6.1.1",
+    "date-fns": "^2.28.0",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "geoblaze": "^0.3.0",
     "georaster": "^1.5.6",
     "georaster-layer-for-leaflet": "^0.6.8",
     "jquery": "^3.6.0",
+    "karma-coverage": "^2.2.0",
     "leaflet": "^1.7.1",
     "leaflet-mouse-position": "^1.2.0",
     "leaflet-sidebar-v2": "^3.2.0",
     "leaflet-svg-shape-markers": "^1.1.1",
     "leaflet.zoomhome": "^1.0.0",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.26.0",
     "ng-select2": "^1.4.1",
     "ng-table-virtual-scroll": "^1.4.0",
     "ngx-cookie": "^5.0.2",
