--- a/infomapper/angular.json
+++ b/infomapper/angular.json
@@ -48,15 +48,15 @@
             ],
             "scripts": [
               "node_modules/leaflet/dist/leaflet.js",
-              "node_modules/plotly.js/dist/plotly.js",
-              "node_modules/jquery/dist/jquery.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/plotly.js/dist/plotly.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/leaflet-svg-shape-markers/dist/leaflet-svg-shape-markers.min.js",
-              "node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.js",
+              "node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.min.js",
               "node_modules/leaflet.zoomhome/dist/leaflet.zoomhome.js",
               "node_modules/leaflet-mouse-position/src/L.Control.MousePosition.js",
               "node_modules/clusterize.js/clusterize.min.js",
-              "node_modules/select2/dist/js/select2.js"
+              "node_modules/select2/dist/js/select2.min.js"
             ]
           },
           "configurations": {
