--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:stats": "ng build --stats-json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -29,7 +30,7 @@
     "@angular/platform-browser": "^13.2.0",
     "@angular/platform-browser-dynamic": "^13.2.0",
     "@angular/router": "^13.2.0",
-    "@OpenWaterFoundation/common": "^0.7.3",
+    "@OpenWaterFoundation/common": "^3.1.0",
     "@turf/bbox": "^6.3.0",
     "@turf/boolean-point-in-polygon": "^6.3.0",
     "@types/d3": "^6.2.0",
@@ -79,7 +80,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.13",
     "@types/node": "^12.11.1",
-    "cypress": "^9.4.1",
+    "cypress": "^9.5.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.11",
@@ -89,6 +90,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
