--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -39,6 +39,7 @@
     "@types/plotly.js": "^1.50.15",
     "@types/select2": "^4.0.54",
     "@types/showdown": "^1.9.3",
+    "@ungap/structured-clone": "^0.3.4",
     "bootstrap": "^5.1.3",
     "clusterize.js": "^0.18.1",
     "d3": "^6.1.1",
