--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -25,12 +25,13 @@
     "@angular/compiler": "^13.2.0",
     "@angular/core": "^13.2.0",
     "@angular/elements": "^13.2.0",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "^13.2.0",
     "@angular/material": "^13.1.3",
     "@angular/platform-browser": "^13.2.0",
     "@angular/platform-browser-dynamic": "^13.2.0",
     "@angular/router": "^13.2.0",
-    "@OpenWaterFoundation/common": "^3.7.0",
+    "@OpenWaterFoundation/common": "file:../../../../AngularDev/git-repos/owf-app-dev-ng/ng-workspace/dist/OpenWaterFoundation/common",
     "@turf/bbox": "^6.3.0",
     "@turf/boolean-point-in-polygon": "^6.3.0",
     "@types/d3": "^6.2.0",
