--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -31,7 +31,12 @@
     "@angular/platform-browser": "^13.2.0",
     "@angular/platform-browser-dynamic": "^13.2.0",
     "@angular/router": "^13.2.0",
-    "@OpenWaterFoundation/common": "^3.8.3",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@OpenWaterFoundation/common": "file:../../../../AngularDev/git-repos/owf-app-dev-ng/ng-workspace/dist/OpenWaterFoundation/common",
     "@turf/bbox": "^6.3.0",
     "@turf/boolean-point-in-polygon": "^6.3.0",
     "@types/d3": "^6.2.0",
@@ -46,7 +51,6 @@
     "d3": "^6.1.1",
     "date-fns": "^2.28.0",
     "file-saver": "^2.0.2",
-    "font-awesome": "^4.7.0",
     "geoblaze": "^0.3.0",
     "georaster": "^1.5.6",
     "georaster-layer-for-leaflet": "^0.6.8",
