--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -36,7 +36,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@OpenWaterFoundation/common": "file:../../../../AngularDev/git-repos/owf-app-dev-ng/ng-workspace/dist/OpenWaterFoundation/common",
+    "@OpenWaterFoundation/common": "^3.9.0",
     "@turf/bbox": "^6.3.0",
     "@turf/boolean-point-in-polygon": "^6.3.0",
     "@types/d3": "^6.2.0",
@@ -60,7 +60,6 @@
     "leaflet-mouse-position": "^1.2.0",
     "leaflet-sidebar-v2": "^3.2.0",
     "leaflet-svg-shape-markers": "^1.1.1",
-    "leaflet.zoomhome": "^1.0.0",
     "material-design-icons": "^3.0.1",
     "ng-select2": "^1.4.1",
     "ng-table-virtual-scroll": "^1.4.0",
