Initial commit for stories changes to Main & Sub menus.

--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -36,7 +36,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@OpenWaterFoundation/common": "^4.0.2",
+    "@fullpage/angular-fullpage": "^0.0.16",
+    "@OpenWaterFoundation/common": "file:../../../../AngularDev/git-repos/owf-app-dev-ng/ng-workspace/dist/OpenWaterFoundation/common",
     "@turf/bbox": "^6.3.0",
     "@turf/boolean-point-in-polygon": "^6.3.0",
     "@types/d3": "^6.2.0",
@@ -65,6 +66,7 @@
     "ng-table-virtual-scroll": "^1.4.0",
     "ngx-cookie": "^5.0.2",
     "ngx-gallery-9": "^1.0.6",
+    "ngx-logger": "^5.0.11",
     "ngx-showdown": "^6.0.0",
     "papaparse": "^5.2.0",
     "plotly.js": "^1.54.6",
