--- a/infomapper/angular.json
+++ b/infomapper/angular.json
@@ -14,6 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "allowedCommonJsDependencies": [
+              "@fullpage/angular-fullpage",
               "georaster-layer-for-leaflet",
               "geoblaze",
               "georaster",
