--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -19,18 +19,18 @@
     "https": false
   },
   "dependencies": {
-    "@angular/animations": "^13.2.0",
-    "@angular/cdk": "^13.1.3",
-    "@angular/common": "^13.2.0",
-    "@angular/compiler": "^13.2.0",
-    "@angular/core": "^13.2.0",
-    "@angular/elements": "^13.2.0",
-    "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "^13.2.0",
-    "@angular/material": "^13.1.3",
-    "@angular/platform-browser": "^13.2.0",
-    "@angular/platform-browser-dynamic": "^13.2.0",
-    "@angular/router": "^13.2.0",
+    "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.0",
+    "@angular/common": "^14.2.0",
+    "@angular/compiler": "^14.2.0",
+    "@angular/core": "^14.2.0",
+    "@angular/elements": "^14.2.0",
+    "@angular/flex-layout": "^14.0.0-beta.40",
+    "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.2.0",
+    "@angular/platform-browser": "^14.2.0",
+    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/router": "^14.2.0",
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -77,11 +77,11 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.2.1",
-    "@angular-devkit/core": "^13.2.1",
-    "@angular/cli": "~13.2.1",
-    "@angular/compiler-cli": "^13.2.0",
-    "@angular/language-service": "~13.2.0",
+    "@angular-devkit/build-angular": "^14.2.1",
+    "@angular-devkit/core": "^14.2.1",
+    "@angular/cli": "^14.2.1",
+    "@angular/compiler-cli": "^14.2.0",
+    "@angular/language-service": "^14.2.0",
     "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -97,7 +97,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "typescript": "^4.5.5",
+    "typescript": "^4.8.2",
     "webpack-bundle-analyzer": "^4.5.0"
   }
 }
