--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -41,6 +41,7 @@
     "@turf/boolean-point-in-polygon": "^6.3.0",
     "@types/d3": "^6.2.0",
     "@types/leaflet": "^1.7.0",
+    "@types/lunr": "^2.3.4",
     "@types/papaparse": "^5.0.3",
     "@types/plotly.js": "^1.50.15",
     "@types/select2": "^4.0.54",
@@ -60,6 +61,7 @@
     "leaflet-mouse-position": "^1.2.0",
     "leaflet-sidebar-v2": "^3.2.0",
     "leaflet-svg-shape-markers": "^1.1.1",
+    "lunr": "^2.3.9",
     "material-design-icons": "^3.0.1",
     "ng-select2": "^1.4.1",
     "ng-table-virtual-scroll": "^1.4.0",
