--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -36,7 +36,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fullpage/angular-fullpage": "^0.0.16",
-    "@OpenWaterFoundation/common": "file:../../../../AngularDev/git-repos/owf-app-dev-ng/ng-workspace/dist/OpenWaterFoundation/common",
+    "@OpenWaterFoundation/common": "^4.2.1",
     "@turf/bbox": "^6.3.0",
     "@turf/boolean-point-in-polygon": "^6.3.0",
     "@types/d3": "^6.2.0",
